# distroFS

./: Dockerfile  README.md  start.sh
auth-server/: auth-server.cabal  docker-compose.yml  stack.yaml
auth-server/.stack-work/docker/_home/: .ssh
auth-server/.stack-work/image/0/: Dockerfile
auth-server/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/flag-cache/: auth-server-0.1.0.0-1YqB1E2q0TlJ3PwPBo2w40  auth-server-0.1.0.0-2RxAqzru5Zz4c6xsLQunhQ  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  http-api-data-0.3.2-9RGKpfYtINZ17YsGZel6a3  servant-0.9.1.1-1YvZcaz0OLV3uNDBdJkKrY  servant-client-0.9.1.1-2qgn4HLUhDF108ixpaTeg8  servant-server-0.9.1.1-FKQvXJjQ1586gh3lj2fX3G  use-haskell-api-0.1.0.0-8J0ia58xvf8BuCyT0nyHlt  use-haskell-api-0.1.0.0-HR4KsafAg5HGznHF2f2BnY
auth-server/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/pkgdb/: auth-server-0.1.0.0-1YqB1E2q0TlJ3PwPBo2w40.conf  auth-server-0.1.0.0-2RxAqzru5Zz4c6xsLQunhQ.conf  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  http-api-data-0.3.2-9RGKpfYtINZ17YsGZel6a3.conf  package.cache  servant-0.9.1.1-1YvZcaz0OLV3uNDBdJkKrY.conf  servant-client-0.9.1.1-2qgn4HLUhDF108ixpaTeg8.conf  servant-server-0.9.1.1-FKQvXJjQ1586gh3lj2fX3G.conf  use-haskell-api-0.1.0.0-8J0ia58xvf8BuCyT0nyHlt.conf  use-haskell-api-0.1.0.0-HR4KsafAg5HGznHF2f2BnY.conf
auth-server/.stack-work/install/x86_64-linux/lts-7.12/8.0.1/flag-cache/: AES-0.2.9-EL2nY92Dn78drurnb3JCZ  DRBG-0.5.5-8bb72Z4ll6NCO7HwSjNk69  RSA-2.2.0-EHQUhJZHM7hLOJkF4fZ4IR  SHA-1.6.4.2-GSP9nhHyWNEAImBrL9QfXp  auth-server-0.1.0.0-1AXmxDWbqn7FFZPmlKe1le  auth-server-0.1.0.0-8uwpjK0YK4T3rHypEPj2jg  auth-server-0.1.0.0-B2E1f1pN64XAymQlzkgwA4  auth-server-0.1.0.0-C6XcE13NmJL8VXNbNEgDFP  auth-server-0.1.0.0-GShavHm4mjGJIfeDHoBsjS  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  cipher-aes128-0.7.0.3-AoB6dQNk7KT8S3ubkzSL34  crypto-api-0.13.2-LliNhOf849x8qng9ESkbgP  crypto-pubkey-types-0.4.3-JpSD95Q37wENJRNhamSc3  cryptohash-cryptoapi-0.1.4-Fy30UnGI9vX8M9zQlezAn0  http-api-data-0.3.2-A22DPUhAmUlrIoBZ4qkGB  monads-tf-0.1.0.3-HVD88uwypLB1Pu4HQI1mbn  parallel-3.2.1.0-6VcN0yUHtcs831TgbJiSSi  prettyclass-1.0.0.0-23fclqPB1gv5V5N4Gu3Ye6  pureMD5-2.1.3-KuMjsfZZWDT9wovcuYXIJ5  servant-0.9.1.1-JzVvK9yk6sQ1E4UZympEK1  servant-client-0.9.1.1-Jfbv4D3w2K1d9wGI5VTz3  servant-server-0.9.1.1-9171CElIoTq4wzgmteNLu3  use-haskell-api-0.1.0.0-FJx60BJH3MlJbzLkuW9QFl  use-haskell-api-0.1.0.0-HPIxIvekk5KErxr2gmPUyr  use-haskell-api-0.1.0.0-LqQNjmH1ms23qyAUvWhWNV
auth-server/.stack-work/install/x86_64-linux/lts-7.12/8.0.1/pkgdb/: AES-0.2.9-EL2nY92Dn78drurnb3JCZ.conf  auth-server-0.1.0.0-6xa6sQIl9BOBcVSWsweRbl.conf  auth-server-0.1.0.0-C6XcE13NmJL8VXNbNEgDFP.conf  auth-server-0.1.0.0-JgUuTC3kd9pKk9YW9WG5TK.conf  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  http-api-data-0.3.2-A22DPUhAmUlrIoBZ4qkGB.conf  package.cache  servant-0.9.1.1-JzVvK9yk6sQ1E4UZympEK1.conf  servant-client-0.9.1.1-Jfbv4D3w2K1d9wGI5VTz3.conf  servant-server-0.9.1.1-9171CElIoTq4wzgmteNLu3.conf  use-haskell-api-0.1.0.0-FJx60BJH3MlJbzLkuW9QFl.conf  use-haskell-api-0.1.0.0-HPIxIvekk5KErxr2gmPUyr.conf  use-haskell-api-0.1.0.0-LqQNjmH1ms23qyAUvWhWNV.conf
auth-server/src/: Lib.hs  RestClient.hs
dir-server/: dir-server.cabal  docker-compose.yml  stack.yaml
dir-server/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/flag-cache/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  dir-server-0.1.0.0-5V2hNxmEywy3FTXFmgdAed  dir-server-0.1.0.0-IQM6qSPGn7CgzUgsX0CoH  http-api-data-0.3.2-9RGKpfYtINZ17YsGZel6a3  servant-0.9.1.1-1YvZcaz0OLV3uNDBdJkKrY  servant-client-0.9.1.1-2qgn4HLUhDF108ixpaTeg8  servant-server-0.9.1.1-FKQvXJjQ1586gh3lj2fX3G  use-haskell-api-0.1.0.0-8J0ia58xvf8BuCyT0nyHlt  use-haskell-api-0.1.0.0-HR4KsafAg5HGznHF2f2BnY
dir-server/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/pkgdb/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  dir-server-0.1.0.0-5V2hNxmEywy3FTXFmgdAed.conf  dir-server-0.1.0.0-Eb6L12FdEkC66SWvXmEphx.conf  dir-server-0.1.0.0-IQM6qSPGn7CgzUgsX0CoH.conf  http-api-data-0.3.2-9RGKpfYtINZ17YsGZel6a3.conf  package.cache  servant-0.9.1.1-1YvZcaz0OLV3uNDBdJkKrY.conf  servant-client-0.9.1.1-2qgn4HLUhDF108ixpaTeg8.conf  servant-server-0.9.1.1-FKQvXJjQ1586gh3lj2fX3G.conf  use-haskell-api-0.1.0.0-8J0ia58xvf8BuCyT0nyHlt.conf  use-haskell-api-0.1.0.0-HR4KsafAg5HGznHF2f2BnY.conf
dir-server/.stack-work/install/x86_64-linux/lts-7.10/8.0.1/flag-cache/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  dir-server-0.1.0.0-Eb6L12FdEkC66SWvXmEphx  http-api-data-0.3.2-9RGKpfYtINZ17YsGZel6a3  servant-0.9.1.1-1YvZcaz0OLV3uNDBdJkKrY  servant-client-0.9.1.1-2qgn4HLUhDF108ixpaTeg8  servant-server-0.9.1.1-FKQvXJjQ1586gh3lj2fX3G  use-haskell-api-0.1.0.0-HR4KsafAg5HGznHF2f2BnY
dir-server/.stack-work/install/x86_64-linux/lts-7.10/8.0.1/pkgdb/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  dir-server-0.1.0.0-Eb6L12FdEkC66SWvXmEphx.conf  http-api-data-0.3.2-9RGKpfYtINZ17YsGZel6a3.conf  package.cache  servant-0.9.1.1-1YvZcaz0OLV3uNDBdJkKrY.conf  servant-client-0.9.1.1-2qgn4HLUhDF108ixpaTeg8.conf  servant-server-0.9.1.1-FKQvXJjQ1586gh3lj2fX3G.conf  use-haskell-api-0.1.0.0-HR4KsafAg5HGznHF2f2BnY.conf
dir-server/.stack-work/install/x86_64-linux/lts-7.12/8.0.1/flag-cache/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  dir-server-0.1.0.0-1gcWfVYJbV6AfwttvBnew7  dir-server-0.1.0.0-7GM8X08wsex4sZinZNb5S9  http-api-data-0.3.2-A22DPUhAmUlrIoBZ4qkGB  servant-0.9.1.1-JzVvK9yk6sQ1E4UZympEK1  servant-client-0.9.1.1-Jfbv4D3w2K1d9wGI5VTz3  servant-server-0.9.1.1-9171CElIoTq4wzgmteNLu3  use-haskell-api-0.1.0.0-FJx60BJH3MlJbzLkuW9QFl  (+1 more)
dir-server/app/: Main.hs
dir-server/src/: Lib.hs
file-server/: docker-compose.yml  file-server.cabal  stack.yaml
file-server/.stack-work/image/0/: Dockerfile
file-server/src/: Lib.hs
use-haskell/: README.md  docker-compose.yml  stack.yaml  use-haskell.cabal
use-haskell-api/: README.md  stack.yaml  use-haskell-api.cabal
use-haskell-api/src/: UseHaskellAPI.hs  UseHaskellAPIClient.hs
use-haskell/src/: Lib.hs
(+1238 files in other folders)
