name:                dir-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/dir-server#readme
license:             BSD3
license-file:        LICENSE
author:              Lorcan Reidy
maintainer:          loreidy@tcd.ie
copyright:           2016 Lorcan Reidy
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , servant-client
                     , transformers
                     , wai
                     , warp
                     , wai-logger
                     , mongoDB
                     , hslogger
                     , time
                     , bson-generic
                     , resourcet
                     , text
                     , bytestring
                     , bson
                     , mtl
                     , http-client
                     , use-haskell-api
                     , bcrypt
  default-language:    Haskell2010

executable dir-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dir-server
  default-language:    Haskell2010

test-suite dir-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dir-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/crowley100/distroFS.git
